<resources>
    <string name="app_name">SodaLit</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="other_setting">Other Setting</string>
    <string name="change_password">Change Password</string>
    <string name="tell_a_friend">Tell a friend about sodalit</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="support">Support</string>
    <string name="how_it_work">How it Work?</string>
    <string name="add_flat_vila">Add Flat/Vila</string>
    <string name="mutenotification">Mute notification sounds</string>
    <string name="eIntercom">e-Intercom</string>
    <string name="notification_note"> Notification and call when there\'s an\n
        univited visito at the gate</string>
    <string name="e_intercomesetup"><u> e_Intercom Setup</u></string>
    <string name="exter_exit">Entery/exitnotifications</string>
    <string name="maid">Maid, cook, nanny etc.</string>
    <string name="dailyhelps">Daily Helps</string>
    <string name="yourguest">Your Guest</string>
    <string name="deliverycabsandothers">Delivery, Cabs and Others</string>
    <string name="pleasecheck"><![CDATA[Please check your phone setting and app notification(Sometimes battery saving app or auto start manager apps can restrict notifications ).]]></string>
    <string name="settingTitle">Setting</string>
    <string name="notification_setting_title">\"Notification Settings\"</string>
    <string name="notreceiving_notification">Not receiving push notification?</string>
    <string name="e_intercomesetup_adapter">\"e-Intercom Setup\"</string>
    <string name="C13_address">C 13, ABC Parkview</string>
    <string name="title_activity_main_">Main_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_sos">My Sos</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_tab_title">Activity</string>
    <string name="household_tab_title">Household</string>
    <string name="community_tab_title">Community</string>
    <string name="from_name">From Name</string>
    <string name="mohan">mohan</string>
    <string name="from_mobileno">From Mobile no</string>
    <string name="mobileno">2147483647</string>
    <string name="urgancy">Urgancy</string>
    <string name="medium">Medium</string>
    <string name="house_no">House No</string>
    <string name="str_house_no">3232</string>
    <string name="Reason">Reason</string>
    <string name="waterflloding">Water flooding</string>
    <string name="summary">Summary</string>
    <string name="takenCare">Taken care</string>
    <string name="cancel_sos">Cancel SOS</string>
    <string name="ignore_taken_care">Ignore Taken care</string>
    <string name="Sos_date">SOS Date</string>
    <string name="str_sos_date">2018-12-05</string>
    <string name="sos_time">SOS time</string>
    <string name="str_sos_time">01:12:04</string>
    <string name="add_emeregancy_tab">Add Emergancy</string>
    <string name="list_emergancy_tab">List Emergancy Tab</string>
    <string name="title_mysos">My Sos</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="delivery_boy">Delivery Boy</string>
    <string name="abdul">Abdul</string>
</resources>
