<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.NotidficationSettingActivity">
            <Switch
                android:id="@+id/mutenotification"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:text="@string/mutenotification"
                android:textSize="18sp" />
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <Switch
                    android:id="@+id/e_intercomswithch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:text="@string/eIntercom"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/notification_note"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/e_intercomesetup"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exter_exit"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAllCaps="true"
                    />

                <Switch
                    android:id="@+id/dailyhelpswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:text="@string/dailyhelps"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/maid"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <Switch
                    android:id="@+id/yourguestswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:text="@string/yourguest"
                    android:textSize="16sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <Switch
                    android:id="@+id/deliveryswitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:text="@string/deliverycabsandothers"
                    android:textSize="16sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:padding="5dp"
                        android:text="@string/notreceiving_notification"
                        />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:padding="5dp"
                        android:text="@string/pleasecheck"
                        />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/frameenable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4c000000"
        android:visibility="gone"
        />
</FrameLayout>
</LinearLayout>